[package]
authors = ["Sven Sauleau <sven@sauleau.com>"]
edition = "2018"
name = "wasm-pack-test"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
Boa = {version = "0.11.0", features = ["console"]}
getrandom = {version = "0.2.3", features = ["js"]}
wasm-bindgen = {version = "0.2.74", features = ["serde-serialize"]}
js-sys = "*"
serde="1.0.117"
serde_json = "*"
